PL/Projecto/tests/good/26.nx
let x : int = 2 in
{
  print(x);
  x := 6;
  print(x);
}
