PL/Projecto/tests/bad/9.nx
foreach i in 6..2 do print(i);
